crates/nash-driver/tests/solve/snapshots/solve__inference__trait_default_body_must_match_its_annotation.snap
---
source: crates/nash-driver/tests/solve/inference.rs
description: "module Main exposing (..)\ntrait Keep 'a where\n    keep : 'a -> 'a\n    keep x = ()\n"
info: diagnostic
---
nash::type::mismatch

  × Type mismatch: expected `'a`, found `unit`.
   ╭─[Main.nash:4:14]
 2 │ trait Keep 'a where
 3 │     keep : 'a -> 'a
   ·            ────┬───
   ·                ╰── declared type
 4 │     keep x = ()
   ·              ─┬
   ·               ╰── body of `keep`
   ╰────
  help: Keep the implementation generic over `'a`, or specialize its annotation.
