crates/nash-driver/tests/solve/snapshots/solve__inference__tuple_pattern_arg.snap
---
source: crates/nash-driver/tests/solve/inference.rs
description: "Code:\n\nmodule Main exposing (swap)\n\nswap ( a, b ) = ( b, a )\n"
---
swap : forall a b. ( a, b ) -> ( b, a )
