crates/nash-driver/tests/solve/snapshots/solve__inference__tuple_tail_survives_patterns_annotations_and_instantiation.snap
---
source: crates/nash-driver/tests/solve/inference.rs
description: "Code:\n\nmodule Main exposing (..)\n\nrotate (a, b, c, d, e) = (e, a, b, c, d)\nkeep : ('a, 'b, 'c, 'd, 'e) -> ('a, 'b, 'c, 'd, 'e)\nkeep value = value\nresult = (keep ((), (), (), 1, \"tail\"), rotate ((), (), (), \"four\", 5))\n"
---
keep : forall a b c d e. ( a, b, c, d, e ) -> ( a, b, c, d, e )
result : forall a a1 d e. (FromInt d, FromString e, FromString a, FromInt a1) => ( ( unit, unit, unit, d, e ), ( a1, unit, unit, unit, a ) )
rotate : forall a b c d e. ( a, b, c, d, e ) -> ( e, a, b, c, d )
